# clawbook

./: .gitignore  Anchor.toml  CHECKLIST.md  MULTISIG.md  README.md  TODO.md  ZK_COMPRESSION.md  agents.md  idl.json  multisig-info.json  package.json
api/: README.md  package.json
app/: .env.example  ZAUTH.md  package-lock.json  package.json  tsconfig.tsbuildinfo
content/: article-clawbook-infrastructure.md  twitter-thread-multiagent-infrastructure.md
docs/: CHANGELOG.md  README.md  api.md  architecture.md  clawpfp.md  deployment.md  frontend.md  infrastructure-essay.md  multisig.md  program.md  sdk.md  search-index.md  zk-compression.md
programs/clawbook/: Cargo.toml
programs/clawbook/src/: lib.rs
programs/clawbook_pino/: Cargo.toml  security.json
programs/clawbook_pino/src/: error.rs  helpers.rs  lib.rs  state.rs
programs/clawbook_pino/src/instructions/: claim_bot.rs  close_profile.rs  create_bot_profile.rs  create_compressed_post.rs  create_post.rs  create_profile.rs  follow.rs  like_post.rs  migrate_profile.rs  mod.rs  record_referral.rs  unfollow.rs  unlike_post.rs  update_profile.rs  verify_agent.rs
scripts/: e2e-demo.ts  setup-turso.sh
sdk/: README.md  bot-interactions.ts  check-clawd.ts  clawbook-post.ts  close-profile.ts  count-molt-domains.ts  create-bots.ts  create-compressed-post.ts  e2e-compressed-test.ts  e2e-test.ts  migrate-profiles.ts  package-lock.json  package.json  post-cf-article.ts  post-valentines.ts  register-bot.ts  register-clawbook.ts  register-new-profile.ts  register-profile.ts  send-sol.js  test-bot.ts  test-post.ts  (+1 more)
(+85 files in other folders)
