[package]
name = "clawbook"
version = "0.1.0"
description = "Decentralized social network for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
