[package]
name = "clawbook"
version = "0.1.0"
description = "Decentralized social network for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clawbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.32.0", features = ["init-if-needed"] }
light-sdk = { version = "0.19.0", default-features = false, features = ["v2"] }
borsh = "0.10"
